--- a/assets/css/util.css
+++ b/assets/css/util.css
@@ -57,6 +57,9 @@ p, span, div {
 	font-family: Ubuntu-Regular;
 }
 
+.xCursor {
+  cursor: pointer;
+}
 /*[ FONT SIZE ]
 ///////////////////////////////////////////////////////////
 */
@@ -276,6 +279,16 @@ p, span, div {
 .op-0-9 {opacity: 0.9;}
 .op-1-0 {opacity: 1;}
 
+/* with */
+.img-w-100 {
+  width: 100%;
+  height: auto;
+}
+
+.alto-vh-83 {
+	height: 83vh;
+}
+
 /*DISABLED DIV AND CHILDS*/
 .d-disabled {
 	pointer-events: none;
@@ -284,4 +297,24 @@ p, span, div {
 	/* for "disabled" effect */
 	opacity: 0.5;
 	background: #CCC;
+}
+
+/*[styles c3]*/
+.c3-ygrid-line.lineRed line {
+  stroke: #ec407a;
+}
+
+.c3-ygrid-line.lineRed text {
+  fill: #ec407a;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.c3-xgrid-line.lineGreen line {
+  stroke: #757575;
+}
+
+.c3-xgrid-line.lineGreen text {
+  fill: #388e3c;
+  font-weight: 600;
 }
