--- a/assets/css/util.css
+++ b/assets/css/util.css
@@ -318,3 +318,14 @@ p, span, div {
   fill: #388e3c;
   font-weight: 600;
 }
+
+/*MEDIA SCREEN*/
+/*MEDIA SCREEN*/
+.hidden-mobile {
+  display: block;
+}
+@media screen and (max-width: 768px) {
+	.hidden-mobile {
+	  display: none;
+	}
+}
